--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
     <div class="container">
         <div class="currency">
-            <select id="currency-one"> <option value="AED">NOK</option>
+            <select id="currency-one"> <option value="NOK" selected>NOK</option>
           <option value="ARS">ARS</option>
+          <option value="AED">AED</option>
           <option value="AUD">AUD</option>
           <option value="BGN">BGN</option>
           <option value="BRL">BRL</option>
@@ -57,7 +58,6 @@
           <option value="KZT">KZT</option>
           <option value="MXN">MXN</option>
           <option value="MYR">MYR</option>
-          <option value="NOK" selected>NOK</option>
           <option value="NZD">NZD</option>
           <option value="PAB">PAB</option>
           <option value="PEN">PEN</option>
@@ -90,8 +90,9 @@
         </div>
             <div class="container">
         <div class="currency">
-            <select id="currency-two"> <option value="AED">EUR</option>
+            <select id="currency-two"> <option value="EUR"selected>EUR</option>
           <option value="ARS">ARS</option>
+          <option value="AED">AED</option>
           <option value="AUD">AUD</option>
           <option value="BGN">BGN</option>
           <option value="BRL">BRL</option>
@@ -105,7 +106,6 @@
           <option value="DKK">DKK</option>
           <option value="DOP">DOP</option>
           <option value="EGP">EGP</option>
-          <option value="EUR"selected>EUR</option>
           <option value="FJD">FJD</option>
           <option value="GBP">GBP</option>
           <option value="GTQ">GTQ</option>
